--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ output:
     theme: cerulean
 ---
 
-# This is Jeff's awesome website
+# Welcome to Alison's website
 You can learn more about me [here](about.html)
 
 ![](https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif)
