--- a/plotly.Rmd
+++ b/plotly.Rmd
@@ -5,4 +5,48 @@ date: "10/22/2019"
 output: html_document
 ---
 
+```{r}
+library(tidyverse)
+library(viridis)
+library(p8105.datasets)
+
+library(plotly)
+```
+
 My name is Alison and I make websites _with interactive graphics!!_
+
+```{r}
+set.seed(1)
+
+data(nyc_airbnb)
+
+nyc_airbnb = 
+  nyc_airbnb %>% 
+  mutate(rating = review_scores_location / 2) %>%
+  select(
+    neighbourhood_group, neighbourhood, rating, 
+    price, room_type, lat, long) %>% 
+  filter(
+    !is.na(rating),
+    neighbourhood_group == "Manhattan",
+    room_type == "Entire home/apt",
+    price %in% 100:500
+    ) %>% 
+  sample_n(5000)
+```
+
+# Making Interactive Plots
+
+Here's a scatterplot
+```{r}
+nyc_airbnb %>%
+  mutate(text_label = str_c("Price: $", price, 
+                            '\nRating: ', rating)) %>% 
+  plot_ly(
+    x = ~lat, y = ~long, type = "scatter", mode = "markers",
+    color = ~price, text = ~text_label, alpha = 0.5)
+```
+
+
+
+
