--- a/about.Rmd
+++ b/about.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "About me"
+title: "About Me"
 output: 
   html_document:
     toc: true
     toc_float: true
 ---
 
-My name is Alison and I make websites!!
+Here's where I put more info about me
